bindings/rust/libmem-sys/src/bindings.rs

#[test]
fn bindgen_test_layout_lm_inst_t() {
    const UNINIT: ::std::mem::MaybeUninit<lm_inst_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<lm_inst_t>(),
        224usize,
        concat!("Size of: ", stringify!(lm_inst_t))
    );
    assert_eq!(
        ::std::mem::align_of::<lm_inst_t>(),
        8usize,
        concat!("Alignment of ", stringify!(lm_inst_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).address) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(lm_inst_t),
            "::",
            stringify!(address)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).size) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(lm_inst_t),
            "::",
            stringify!(size)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).bytes) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(lm_inst_t),
            "::",
            stringify!(bytes)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).mnemonic) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(lm_inst_t),
            "::",
            stringify!(mnemonic)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).op_str) as usize - ptr as usize },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(lm_inst_t),
            "::",
            stringify!(op_str)
        )
    );
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct lm_vmt_entry_t {
    pub orig_func: lm_address_t,
    pub index: lm_size_t,
    pub next: *mut lm_vmt_entry_t,
}
#[test]
fn bindgen_test_layout_lm_vmt_entry_t() {
    const UNINIT: ::std::mem::MaybeUninit<lm_vmt_entry_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<lm_vmt_entry_t>(),
        24usize,
        concat!("Size of: ", stringify!(lm_vmt_entry_t))
    );
    assert_eq!(
        ::std::mem::align_of::<lm_vmt_entry_t>(),
        8usize,
        concat!("Alignment of ", stringify!(lm_vmt_entry_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).orig_func) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(lm_vmt_entry_t),
            "::",
            stringify!(orig_func)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).index) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(lm_vmt_entry_t),
            "::",
            stringify!(index)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).next) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(lm_vmt_entry_t),
            "::",
            stringify!(next)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct lm_vmt_t {
    pub vtable: *mut lm_address_t,
    pub hkentries: *mut lm_vmt_entry_t,
}
#[test]
fn bindgen_test_layout_lm_vmt_t() {
    const UNINIT: ::std::mem::MaybeUninit<lm_vmt_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<lm_vmt_t>(),
        16usize,
        concat!("Size of: ", stringify!(lm_vmt_t))
    );
    assert_eq!(
        ::std::mem::align_of::<lm_vmt_t>(),
        8usize,
        concat!("Alignment of ", stringify!(lm_vmt_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).vtable) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(lm_vmt_t),
            "::",
            stringify!(vtable)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).hkentries) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(lm_vmt_t),
            "::",
            stringify!(hkentries)
        )
    );
}
extern "C" {
    #[doc = " Enumerates processes on a system and calls a callback function for each process found.\n\n @param callback The callback function that will receive the current\n process in the enumeration and an extra argument. This function\n should return `LM_TRUE` to continue the enumeration, or `LM_FALSE`\n to stop it.\n @param arg The user-defined data structure that will be passed to the\n callback function along with the `lm_process_t` structure.\n\n @return `LM_TRUE` on success, or `LM_FALSE` on failure."]
    pub fn LM_EnumProcesses(
        callback: unsafe extern "C" fn(
            process: *mut lm_process_t,
            arg: *mut lm_void_t,
        ) -> lm_bool_t,
        arg: *mut lm_void_t,
    ) -> lm_bool_t;
}
extern "C" {
    #[doc = " Retrieves information about the current process, including its PID,\n parent PID, path, name, start time, and architecture bits.\n\n @param process_out A pointer to the `lm_process_t` structure that will be populated\n with information about the current process.\n\n @return `LM_TRUE` if the process information was successfully\n retrieved or `LM_FALSE` if there was an error."]
    pub fn LM_GetProcess(process_out: *mut lm_process_t) -> lm_bool_t;
}
extern "C" {
    #[doc = " Retrieves information about a specified process identified by its process ID.\n\n @param pid The process ID of the process for which you want to\n retrieve information.\n @param process_out A pointer to the `lm_process_t` structure that will be\n populated with information about the specified process.\n\n @return `LM_TRUE` if the process information was successfully\n retrieved or `LM_FALSE` if there was an issue during the\n retrieval process."]
    pub fn LM_GetProcessEx(pid: lm_pid_t, process_out: *mut lm_process_t) -> lm_bool_t;
}
extern "C" {
    #[doc = " Searches for a process by name and returns whether the process was\n found or not.\n\n @param process_name The name of the process you are trying to find\n (e.g `game.exe`). It can also be a relative path, such as\n `/game/hello` for a process at `/usr/share/game/hello`.\n @param process_out A pointer to the `lm_process_t` structure that will be\n populated with information about the found process.\n\n @return `LM_TRUE` if the process with the specified name was found\n successfully or `LM_FALSE` otherwise."]
    pub fn LM_FindProcess(process_name: lm_string_t, process_out: *mut lm_process_t) -> lm_bool_t;
}
extern "C" {
    #[doc = " Checks if a given process is alive based on its PID and start time.\n\n @param process The process that will be checked.\n\n @return `LM_TRUE` if the process specified by the input `lm_process_t`\n is alive or `LM_FALSE` otherwise."]
    pub fn LM_IsProcessAlive(process: *const lm_process_t) -> lm_bool_t;
}
extern "C" {
    #[doc = " Returns the size of a pointer in bits, which corresponds to the current\n process's bits (32 bits or 64 bits).\n\n @return The size of a pointer in bits."]
    pub fn LM_GetBits() -> lm_size_t;
}
extern "C" {
    #[doc = " Returns the system architecture bits (32 bits or 64 bits).\n\n @return The system bits (32 or 64)."]
    pub fn LM_GetSystemBits() -> lm_size_t;
}
extern "C" {
    #[doc = " Enumerates threads in the current process and calls a callback\n function for each thread found.\n\n @param callback The callback function that will receive the current\n thread in the enumeration and an extra argument. This function\n should return `LM_TRUE` to continue the enumeration, or `LM_FALSE`\n to stop it.\n @param arg The user-defined data structure that will be passed to\n the callback function `callback` during thread enumeration. This\n allows you to pass additional information or context to the\n callback function if needed.\n\n @return The function `LM_EnumThreads` returns a boolean value of\n type `lm_bool_t`, containing `LM_TRUE` if it succeeds, or\n `LM_FALSE` if it fails."]
    pub fn LM_EnumThreads(
        callback: unsafe extern "C" fn(thread: *mut lm_thread_t, arg: *mut lm_void_t) -> lm_bool_t,
        arg: *mut lm_void_t,
    ) -> lm_bool_t;
}
extern "C" {
    #[doc = " Enumerates threads of a given process and invokes a callback\n function for each thread.\n\n @param process The process you want to enumerate the threads from.\n @param callback The callback function that will receive the current\n thread in the enumeration and an extra argument. This function\n should return `LM_TRUE` to continue the enumeration, or `LM_FALSE`\n to stop it.\n @param arg The user-defined data that can be passed to the callback\n function. It allows you to provide additional information or\n context to the callback function when iterating over threads in a\n process.\n\n @return The function `LM_EnumThreadsEx` returns a boolean value,\n either `LM_TRUE` or `LM_FALSE`, depending on the success of the\n operation."]
    pub fn LM_EnumThreadsEx(
        process: *const lm_process_t,
        callback: unsafe extern "C" fn(thread: *mut lm_thread_t, arg: *mut lm_void_t) -> lm_bool_t,
        arg: *mut lm_void_t,
    ) -> lm_bool_t;
}
extern "C" {
    #[doc = " Retrieves information about the thread it's running from.\n\n @param thread_out A pointer to the `lm_thread_t` structure that will be populated\n with information about the current thread, specifically the thread ID (`tid`) and\n the process ID (`owner_pid`).\n\n @return `LM_TRUE` if the thread information was successfully\n retrieved and stored in the provided `lm_thread_t` structure.\n Otherwise, the function returns `LM_FALSE`."]
    pub fn LM_GetThread(thread_out: *mut lm_thread_t) -> lm_bool_t;
}
extern "C" {
    #[doc = " Retrieves information about a thread in a process.\n\n @param process The process that the thread will be retrieved from.\n @param thread_out A pointer to the `lm_thread_t` variable where the function will\n store the thread information retrieved from the process.\n\n @return `LM_TRUE` if the thread was retrieved successfully, or\n `LM_FALSE` if it fails."]
    pub fn LM_GetThreadEx(process: *const lm_process_t, thread_out: *mut lm_thread_t) -> lm_bool_t;
}
extern "C" {
    #[doc = " Retrieves the process that owns a given thread.\n\n @param thread The thread whose process will be retrieved.\n @param process_out A pointer to the `lm_process_t` structure where the function\n `LM_GetThreadProcess` will store the process information related to\n the given thread.\n\n @return `LM_TRUE` if the operation was successful or `LM_FALSE`\n otherwise."]
    pub fn LM_GetThreadProcess(
        thread: *const lm_thread_t,
        process_out: *mut lm_process_t,
    ) -> lm_bool_t;
}
extern "C" {
    #[doc = " Enumerates modules in the current process and calls a callback function\n for each module found.\n\n @param callback The callback function that will receive the current module in\n the enumeration and an extra argument. This function should return `LM_TRUE`\n to continue the enumeration, or `LM_FALSE` to stop it.\n @param arg An extra argument that is passed to the callback function. This allows\n you to provide additional information or context to the callback function when\n it is invoked during the enumeration of modules.\n\n @return Returns `LM_TRUE` if the enumeration succeeds, or `LM_FALSE` if it fails."]
    pub fn LM_EnumModules(
        callback: unsafe extern "C" fn(module: *mut lm_module_t, arg: *mut lm_void_t) -> lm_bool_t,
        arg: *mut lm_void_t,
    ) -> lm_bool_t;
}
